--- a/evaluacion_1_deep_learning.ipynb
+++ b/evaluacion_1_deep_learning.ipynb
@@ -984,14 +984,14 @@
         "print(f\"Exactitud en el conjunto de prueba (Test accuracy): {score[1]:.4f}\")\n"
       ],
       "metadata": {
-        "id": "g8_aLqL5F7AG",
-        "outputId": "93ae84fe-35db-4d3d-b82e-f24769a9f351",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "g8_aLqL5F7AG",
+        "outputId": "93ae84fe-35db-4d3d-b82e-f24769a9f351"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1199,33 @@
             "Epoch 17/50\n",
             "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m183s\u001b[0m 391ms/step - accuracy: 0.8824 - loss: 0.3169 - val_accuracy: 0.9015 - val_loss: 0.2638 - learning_rate: 5.0000e-04\n",
             "Epoch 18/50\n",
-            "\u001b[1m 52/469\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m2:16\u001b[0m 326ms/step - accuracy: 0.8942 - loss: 0.3011"
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m184s\u001b[0m 393ms/step - accuracy: 0.8860 - loss: 0.3110 - val_accuracy: 0.8966 - val_loss: 0.2749 - learning_rate: 5.0000e-04\n",
+            "Epoch 19/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m165s\u001b[0m 351ms/step - accuracy: 0.8846 - loss: 0.3138 - val_accuracy: 0.9017 - val_loss: 0.2635 - learning_rate: 5.0000e-04\n",
+            "Epoch 20/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m168s\u001b[0m 358ms/step - accuracy: 0.8861 - loss: 0.3105 - val_accuracy: 0.9034 - val_loss: 0.2542 - learning_rate: 2.5000e-04\n",
+            "Epoch 21/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m162s\u001b[0m 345ms/step - accuracy: 0.8881 - loss: 0.3027 - val_accuracy: 0.9062 - val_loss: 0.2543 - learning_rate: 2.5000e-04\n",
+            "Epoch 22/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m164s\u001b[0m 350ms/step - accuracy: 0.8880 - loss: 0.3044 - val_accuracy: 0.9048 - val_loss: 0.2507 - learning_rate: 2.5000e-04\n",
+            "Epoch 23/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m158s\u001b[0m 338ms/step - accuracy: 0.8901 - loss: 0.2958 - val_accuracy: 0.9074 - val_loss: 0.2491 - learning_rate: 2.5000e-04\n",
+            "Epoch 24/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m201s\u001b[0m 336ms/step - accuracy: 0.8888 - loss: 0.2973 - val_accuracy: 0.9110 - val_loss: 0.2419 - learning_rate: 2.5000e-04\n",
+            "Epoch 25/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m167s\u001b[0m 355ms/step - accuracy: 0.8921 - loss: 0.2917 - val_accuracy: 0.9085 - val_loss: 0.2454 - learning_rate: 2.5000e-04\n",
+            "Epoch 26/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m163s\u001b[0m 349ms/step - accuracy: 0.8949 - loss: 0.2889 - val_accuracy: 0.9066 - val_loss: 0.2488 - learning_rate: 2.5000e-04\n",
+            "Epoch 27/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m161s\u001b[0m 342ms/step - accuracy: 0.8956 - loss: 0.2917 - val_accuracy: 0.8879 - val_loss: 0.2871 - learning_rate: 2.5000e-04\n",
+            "Epoch 28/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m164s\u001b[0m 349ms/step - accuracy: 0.8963 - loss: 0.2825 - val_accuracy: 0.9050 - val_loss: 0.2492 - learning_rate: 1.2500e-04\n",
+            "Epoch 29/50\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m197s\u001b[0m 338ms/step - accuracy: 0.8925 - loss: 0.2887 - val_accuracy: 0.8868 - val_loss: 0.2855 - learning_rate: 1.2500e-04\n",
+            "\n",
+            "Evaluando el modelo en el conjunto de prueba...\n",
+            "Pérdida en el conjunto de prueba (Test loss): 0.2419\n",
+            "Exactitud en el conjunto de prueba (Test accuracy): 0.9110\n"
           ]
         }
       ]
