agragado inspeccion de salida / aun no funciona

--- a/evaluacion_1_deep_learning.ipynb
+++ b/evaluacion_1_deep_learning.ipynb
@@ -4981,12 +4981,12 @@
         "# ---------------------------------------------------------------------------"
       ],
       "metadata": {
-        "id": "7bstqE4wbK6G",
-        "outputId": "d7d1ffd3-33ce-41ac-dbb5-e604f0ec99a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "7bstqE4wbK6G",
+        "outputId": "d7d1ffd3-33ce-41ac-dbb5-e604f0ec99a3"
       },
       "execution_count": 12,
       "outputs": [
@@ -5652,11 +5652,11 @@
         "# ---------------------------------------------------------------------------"
       ],
       "metadata": {
-        "id": "bnEY4yP9hmyH",
-        "outputId": "e4a0adc6-d600-4510-8599-2062c0bf7b51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bnEY4yP9hmyH",
+        "outputId": "e4a0adc6-d600-4510-8599-2062c0bf7b51"
       },
       "execution_count": 18,
       "outputs": [
@@ -5802,11 +5802,11 @@
         "    print(\"Necesitarás usar la opción de Recrear y Re-entrenar.\")"
       ],
       "metadata": {
-        "id": "5CAzg3A_pl65",
-        "outputId": "4defdcfe-77c7-47f3-9d81-0975d707c10d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5CAzg3A_pl65",
+        "outputId": "4defdcfe-77c7-47f3-9d81-0975d707c10d"
       },
       "execution_count": 21,
       "outputs": [
@@ -5858,11 +5858,11 @@
         "print(\"-\" * 50)"
       ],
       "metadata": {
-        "id": "g0eN8GtZrjuD",
-        "outputId": "08ea172a-2624-4760-ba3a-8fb25832ff7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g0eN8GtZrjuD",
+        "outputId": "08ea172a-2624-4760-ba3a-8fb25832ff7a"
       },
       "execution_count": 22,
       "outputs": [
@@ -6056,12 +6056,12 @@
         "# ==========================================================================="
       ],
       "metadata": {
-        "id": "f45TkhLXr4Mk",
-        "outputId": "cec3e194-411e-41e0-e98c-5633c3f29e3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "f45TkhLXr4Mk",
+        "outputId": "cec3e194-411e-41e0-e98c-5633c3f29e3a"
       },
       "execution_count": 25,
       "outputs": [
@@ -6712,6 +6712,136 @@
             "1. Documentar el análisis completo y justificar la elección de 'MLP_ReLU_128_64_D0.15_ES_FineTune'.\n",
             "2. Generar y analizar el Reporte de Clasificación detallado (por clase) para 'MLP_ReLU_128_64_D0.15_ES_FineTune'.\n",
             "3. (Opcional) Recrear y guardar el modelo 'MLP_ReLU_128_64_D0.15_ES_FineTune' entrenado hasta su mejor época.\n",
+            "------------------------------------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ===========================================================================\n",
+        "# Sección X+1: Inspección Visual de Predicciones del Mejor Modelo\n",
+        "# ===========================================================================\n",
+        "# Analizaremos visualmente qué tipo de imágenes nuestro mejor modelo\n",
+        "# clasifica correcta e incorrectamente para entender mejor sus fortalezas y debilidades.\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*60)\n",
+        "print(\"   INSPECCIÓN VISUAL DE PREDICCIONES\")\n",
+        "print(\"=\"*60)\n",
+        "\n",
+        "# --- PASO 1: Obtener el Mejor Modelo Final Entrenado ---\n",
+        "# Asegúrate de tener el objeto del mejor modelo final en una variable.\n",
+        "# Opciones:\n",
+        "#   A) Si lo guardaste en una variable global: model_final = best_model_object_global\n",
+        "#   B) Si lo guardaste en archivo: model_final = keras.models.load_model(\"nombre_archivo.keras\")\n",
+        "#   C) Si lo recreaste/reentrenaste en la celda anterior: model_final = model_final (ya existe)\n",
+        "\n",
+        "# !!--- AJUSTA ESTA LÍNEA SEGÚN TU CASO ---!\n",
+        "# Ejemplo si lo recreaste en la celda anterior:\n",
+        "if 'model_final' in locals() and isinstance(model_final, keras.Model):\n",
+        "    print(f\"Usando el modelo final: {model_final.name}\")\n",
+        "    model_to_inspect = model_final\n",
+        "    predictions_available = True\n",
+        "else:\n",
+        "    print(\"ERROR: No se encontró el objeto del modelo final ('model_final').\")\n",
+        "    print(\"Asegúrate de haber cargado o re-entrenado el mejor modelo.\")\n",
+        "    predictions_available = False\n",
+        "\n",
+        "# --- Continuar solo si tenemos el modelo ---\n",
+        "if predictions_available:\n",
+        "\n",
+        "    # --- PASO 2: Obtener Predicciones ---\n",
+        "    print(\"\\nObteniendo predicciones en el conjunto de prueba...\")\n",
+        "    # Predecir probabilidades\n",
+        "    y_pred_prob_inspect = model_to_inspect.predict(x_test, verbose=0)\n",
+        "    # Obtener la clase predicha (el índice con la mayor probabilidad)\n",
+        "    y_pred_classes_inspect = np.argmax(y_pred_prob_inspect, axis=1)\n",
+        "    print(\"Predicciones obtenidas.\")\n",
+        "\n",
+        "    # --- PASO 3: Identificar Índices Correctos e Incorrectos ---\n",
+        "    # Comparamos las predicciones (y_pred_classes_inspect) con las etiquetas verdaderas (y_test_labels)\n",
+        "    # np.nonzero devuelve una tupla, tomamos el primer elemento [0] que contiene los índices.\n",
+        "    correct_indices = np.nonzero(y_pred_classes_inspect == y_test_labels)[0]\n",
+        "    incorrect_indices = np.nonzero(y_pred_classes_inspect != y_test_labels)[0]\n",
+        "    print(f\"Se encontraron {len(correct_indices)} predicciones correctas y {len(incorrect_indices)} incorrectas.\")\n",
+        "\n",
+        "    # --- PASO 4: Visualizar Predicciones Correctas ---\n",
+        "    print(\"\\nMostrando 9 ejemplos de predicciones CORRECTAS:\")\n",
+        "    plt.figure(figsize=(8, 8))\n",
+        "    plt.suptitle(\"Ejemplos de Predicciones Correctas\", fontsize=14)\n",
+        "    # Iterar sobre los primeros 9 índices correctos\n",
+        "    for i, correct_idx in enumerate(correct_indices[:9]):\n",
+        "        plt.subplot(3, 3, i + 1)\n",
+        "        # Mostrar la imagen original (necesita reshape a 28x28 desde (28,28,1))\n",
+        "        plt.imshow(x_test[correct_idx].reshape(28, 28), cmap='gray', interpolation='none')\n",
+        "        # Añadir título con Predicción y Valor Real\n",
+        "        plt.title(\"Predicción: {}\\nReal: {}\".format(\n",
+        "            CLASS_NAMES[y_pred_classes_inspect[correct_idx]], # Nombre de clase predicha\n",
+        "            CLASS_NAMES[y_test_labels[correct_idx]]           # Nombre de clase real\n",
+        "        ), fontsize=9)\n",
+        "        plt.axis('off') # Ocultar ejes\n",
+        "    plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+        "    plt.show()\n",
+        "\n",
+        "    # --- PASO 5: Visualizar Predicciones Incorrectas ---\n",
+        "    print(\"\\nMostrando 9 ejemplos de predicciones INCORRECTAS:\")\n",
+        "    plt.figure(figsize=(8, 8))\n",
+        "    plt.suptitle(\"Ejemplos de Predicciones Incorrectas\", fontsize=14)\n",
+        "    # Iterar sobre los primeros 9 índices incorrectos\n",
+        "    for i, incorrect_idx in enumerate(incorrect_indices[:9]):\n",
+        "        plt.subplot(3, 3, i + 1)\n",
+        "        # Mostrar la imagen original\n",
+        "        plt.imshow(x_test[incorrect_idx].reshape(28, 28), cmap='gray', interpolation='none')\n",
+        "        # Añadir título con Predicción y Valor Real (para ver el error)\n",
+        "        plt.title(\"Predicción: {}\\nActual: {}\".format(\n",
+        "             CLASS_NAMES[y_pred_classes_inspect[incorrect_idx]], # Nombre de clase predicha (incorrecta)\n",
+        "             CLASS_NAMES[y_test_labels[incorrect_idx]]           # Nombre de clase real\n",
+        "        ), fontsize=9)\n",
+        "        plt.axis('off')\n",
+        "    plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+        "    plt.show()\n",
+        "\n",
+        "    # --- ANÁLISIS CUALITATIVO (Tu parte en Markdown) ---\n",
+        "    # Observa las imágenes incorrectas.\n",
+        "    # - ¿Son visualmente ambiguas? (Ej: Pullover vs Coat vs Shirt)\n",
+        "    # - ¿Hay errores que un humano también podría cometer?\n",
+        "    # - ¿Qué clases tiende a confundir el modelo? (Esto debería coincidir con\n",
+        "    #   lo visto en el classification_report y la matriz de confusión si la generas).\n",
+        "    print(\"\\n--- Análisis Cualitativo Sugerido ---\")\n",
+        "    print(\"Observa las imágenes clasificadas incorrectamente. ¿Son ambiguas?\")\n",
+        "    print(\"¿Qué tipos de errores comete el modelo? ¿Coincide con el reporte de clasificación?\")\n",
+        "\n",
+        "else:\n",
+        "    print(\"\\nNo se pudo realizar la inspección visual porque el modelo final no está disponible.\")\n",
+        "\n",
+        "\n",
+        "print(\"-\" * 60)\n",
+        "# ===========================================================================\n",
+        "# Fin de la Sección de Inspección Visual\n",
+        "# ==========================================================================="
+      ],
+      "metadata": {
+        "id": "sq8U-Addus3L",
+        "outputId": "d0e3e7e5-256a-45ea-87db-5f6fcb0896d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "============================================================\n",
+            "   INSPECCIÓN VISUAL DE PREDICCIONES\n",
+            "============================================================\n",
+            "ERROR: No se encontró el objeto del modelo final ('model_final').\n",
+            "Asegúrate de haber cargado o re-entrenado el mejor modelo.\n",
+            "\n",
+            "No se pudo realizar la inspección visual porque el modelo final no está disponible.\n",
             "------------------------------------------------------------\n"
           ]
         }
