agregado respaldo de .keras a github

--- a/evaluacion_1_deep_learning.ipynb
+++ b/evaluacion_1_deep_learning.ipynb
@@ -9298,6 +9298,216 @@
     {
       "cell_type": "code",
       "source": [
+        "# ===========================================================================\n",
+        "# Celda: Respaldar Modelo .keras Específico a GitHub usando Git LFS\n",
+        "# ===========================================================================\n",
+        "\n",
+        "import os\n",
+        "import getpass # Para ingresar el token de forma más segura\n",
+        "\n",
+        "# --- 1. Configuración (¡¡MODIFICA ESTOS VALORES!!) ---\n",
+        "GITHUB_USER = \"qb4745\"  # TU USUARIO DE GITHUB\n",
+        "REPO_NAME = \"evaluacion_1_deep_learning\" # TU REPOSITORIO (donde está este notebook)\n",
+        "BRANCH_NAME = \"main\" # O \"master\", etc.\n",
+        "# --- Archivo específico a guardar ---\n",
+        "MODEL_FILENAME_TO_SAVE = \"MLP_ReLU_128_64_D0.2_best_model_ES.keras\" # El modelo recomendado\n",
+        "\n",
+        "# --- Verificar que el archivo a guardar existe en Colab ---\n",
+        "source_model_path_check = f\"/content/{MODEL_FILENAME_TO_SAVE}\"\n",
+        "if not os.path.exists(source_model_path_check):\n",
+        "    print(f\"¡ERROR CRÍTICO! El archivo '{MODEL_FILENAME_TO_SAVE}' no se encontró en /content/.\")\n",
+        "    print(\"Asegúrate de que el modelo se haya guardado correctamente con ese nombre antes de continuar.\")\n",
+        "    raise FileNotFoundError(f\"Archivo no encontrado: {source_model_path_check}\")\n",
+        "else:\n",
+        "    print(f\"Archivo '{MODEL_FILENAME_TO_SAVE}' encontrado en /content/. Procediendo...\")\n",
+        "\n",
+        "# Construir la URL del repositorio\n",
+        "REPO_URL = f\"https://github.com/{GITHUB_USER}/{REPO_NAME}.git\"\n",
+        "\n",
+        "# --- 2. Clonar el Repositorio (si no existe ya) ---\n",
+        "# Nos aseguramos de estar en /content/ antes de clonar\n",
+        "try:\n",
+        "    os.chdir('/content/')\n",
+        "except FileNotFoundError:\n",
+        "    print(\"ERROR: No se pudo cambiar al directorio /content/\")\n",
+        "    raise SystemExit(\"Error crítico: directorio base de Colab no encontrado.\")\n",
+        "\n",
+        "if not os.path.exists(REPO_NAME):\n",
+        "    print(f\"\\nClonando repositorio '{REPO_NAME}' desde {REPO_URL}...\")\n",
+        "    !git clone {REPO_URL}\n",
+        "    print(\"Repositorio clonado.\")\n",
+        "else:\n",
+        "    print(f\"\\nEl directorio '{REPO_NAME}' ya existe. Asumiendo que es el repositorio clonado.\")\n",
+        "    # Opcional: Hacer pull para actualizar (puede causar conflictos si hay cambios locales no commiteados)\n",
+        "    # print(\"Haciendo git pull para actualizar...\")\n",
+        "    # %cd {REPO_NAME}\n",
+        "    # !git pull origin {BRANCH_NAME}\n",
+        "    # %cd .. # Volver a /content/\n",
+        "\n",
+        "# --- 3. Navegar al Directorio del Repositorio ---\n",
+        "try:\n",
+        "    os.chdir(REPO_NAME)\n",
+        "    print(f\"\\nCambiado al directorio del repositorio: {os.getcwd()}\")\n",
+        "except FileNotFoundError:\n",
+        "    print(f\"ERROR: No se pudo cambiar al directorio '{REPO_NAME}'. ¿Falló la clonación?\")\n",
+        "    raise SystemExit(\"Error crítico: directorio del repositorio no encontrado.\")\n",
+        "\n",
+        "# --- 4. Instalar y Configurar Git LFS ---\n",
+        "print(\"\\nInstalando y configurando Git LFS...\")\n",
+        "!apt-get install git-lfs -qq > /dev/null\n",
+        "!git lfs install --system --skip-repo\n",
+        "print(\"Git LFS instalado y configurado globalmente.\")\n",
+        "print(\"Configurando LFS para rastrear archivos .keras...\")\n",
+        "!git lfs track \"*.keras\"\n",
+        "print(\"Archivo .gitattributes configurado/actualizado para rastrear *.keras.\")\n",
+        "!git add .gitattributes # Asegurar que .gitattributes se commitea\n",
+        "\n",
+        "# --- 5. Copiar el Modelo .keras al Repositorio Clonado ---\n",
+        "# La ruta de origen ahora es relativa al directorio /content/ donde estábamos antes\n",
+        "source_model_path = f\"../{MODEL_FILENAME_TO_SAVE}\"\n",
+        "destination_model_path = f\"./{MODEL_FILENAME_TO_SAVE}\" # Dentro del directorio actual (el repo)\n",
+        "\n",
+        "print(f\"\\nIntentando copiar '{MODEL_FILENAME_TO_SAVE}' desde '{source_model_path}' a '{destination_model_path}'...\")\n",
+        "try:\n",
+        "    # Usamos !cp para copiar el archivo\n",
+        "    get_ipython().system(f'cp \"{source_model_path}\" \"{destination_model_path}\"')\n",
+        "    if os.path.exists(destination_model_path):\n",
+        "        print(f\"Archivo '{MODEL_FILENAME_TO_SAVE}' copiado/actualizado en el repositorio.\")\n",
+        "        model_ready_to_commit = True\n",
+        "    else:\n",
+        "        print(f\"ERROR: Falló la copia de '{MODEL_FILENAME_TO_SAVE}'.\")\n",
+        "        model_ready_to_commit = False\n",
+        "except Exception as e:\n",
+        "     print(f\"ERROR durante la copia del archivo: {e}\")\n",
+        "     model_ready_to_commit = False\n",
+        "\n",
+        "\n",
+        "# --- 6. Configurar Git User ---\n",
+        "print(\"\\nConfigurando identidad de Git...\")\n",
+        "# Intenta obtener de la config global, si no, pide input\n",
+        "git_email = !git config --global user.email\n",
+        "git_name = !git config --global user.name\n",
+        "if not git_email or not git_email[0]:\n",
+        "    GIT_USER_EMAIL = getpass.getpass('Ingresa tu email de GitHub: ')\n",
+        "    !git config --global user.email \"{GIT_USER_EMAIL}\"\n",
+        "else:\n",
+        "     print(f\"   Usando email de Git existente: {git_email[0]}\")\n",
+        "if not git_name or not git_name[0]:\n",
+        "    GIT_USER_NAME = getpass.getpass('Ingresa tu nombre de usuario de GitHub: ')\n",
+        "    !git config --global user.name \"{GIT_USER_NAME}\"\n",
+        "else:\n",
+        "     print(f\"   Usando nombre de Git existente: {git_name[0]}\")\n",
+        "print(\"Identidad de Git configurada.\")\n",
+        "\n",
+        "# --- 7. Añadir, Hacer Commit y Push ---\n",
+        "if model_ready_to_commit:\n",
+        "    print(f\"\\nAñadiendo '{MODEL_FILENAME_TO_SAVE}' al staging de Git...\")\n",
+        "    !git add \"{MODEL_FILENAME_TO_SAVE}\"\n",
+        "\n",
+        "    print(\"\\nVerificando estado de Git (status)...\")\n",
+        "    !git status\n",
+        "\n",
+        "    commit_message = f\"Add/Update Keras model (LFS): {MODEL_FILENAME_TO_SAVE}\"\n",
+        "    print(f\"\\nHaciendo commit con mensaje: '{commit_message}'\")\n",
+        "    # Usar git commit --no-verify si hay hooks pre-commit que den problemas en Colab\n",
+        "    !git commit -m \"{commit_message}\"\n",
+        "\n",
+        "    print(\"\\nPreparando para hacer push a GitHub...\")\n",
+        "    GITHUB_PAT = getpass.getpass('Ingresa tu Personal Access Token (PAT) de GitHub: ')\n",
+        "    remote_url_with_token = f\"https://{GITHUB_USER}:{GITHUB_PAT}@github.com/{GITHUB_USER}/{REPO_NAME}.git\"\n",
+        "\n",
+        "    print(f\"Haciendo push a la rama '{BRANCH_NAME}'...\")\n",
+        "    # El push subirá el puntero LFS a Git y el archivo real al almacenamiento LFS de GitHub\n",
+        "    !git push \"{remote_url_with_token}\" {BRANCH_NAME}\n",
+        "\n",
+        "    print(\"\\n¡Push completado! Verifica tu repositorio en GitHub.\")\n",
+        "    print(f\"Deberías ver el archivo '{MODEL_FILENAME_TO_SAVE}' y notar que indica 'Stored with Git LFS'.\")\n",
+        "\n",
+        "else:\n",
+        "    print(\"\\nNo se puede proceder con el commit/push porque el archivo del modelo no está listo o no se pudo copiar.\")\n",
+        "\n",
+        "\n",
+        "# --- 8. Regresar al Directorio Original (/content/) ---\n",
+        "try:\n",
+        "    os.chdir(\"/content/\")\n",
+        "    print(f\"\\nRegresado al directorio: {os.getcwd()}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"No se pudo regresar al directorio /content/: {e}\")"
+      ],
+      "metadata": {
+        "id": "dFA2Azs-XbgN",
+        "outputId": "8806b908-76c8-4af7-d859-7c803f922302",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archivo 'MLP_ReLU_128_64_D0.2_best_model_ES.keras' encontrado en /content/. Procediendo...\n",
+            "\n",
+            "El directorio 'evaluacion_1_deep_learning' ya existe. Asumiendo que es el repositorio clonado.\n",
+            "\n",
+            "Cambiado al directorio del repositorio: /content/evaluacion_1_deep_learning\n",
+            "\n",
+            "Instalando y configurando Git LFS...\n",
+            "Git LFS initialized.\n",
+            "Git LFS instalado y configurado globalmente.\n",
+            "Configurando LFS para rastrear archivos .keras...\n",
+            "\"*.keras\" already supported\n",
+            "Archivo .gitattributes configurado/actualizado para rastrear *.keras.\n",
+            "\n",
+            "Intentando copiar 'MLP_ReLU_128_64_D0.2_best_model_ES.keras' desde '../MLP_ReLU_128_64_D0.2_best_model_ES.keras' a './MLP_ReLU_128_64_D0.2_best_model_ES.keras'...\n",
+            "Archivo 'MLP_ReLU_128_64_D0.2_best_model_ES.keras' copiado/actualizado en el repositorio.\n",
+            "\n",
+            "Configurando identidad de Git...\n",
+            "   Usando email de Git existente: jai.vicencio@duocuc.cl\n",
+            "   Usando nombre de Git existente: qb4745\n",
+            "Identidad de Git configurada.\n",
+            "\n",
+            "Añadiendo 'MLP_ReLU_128_64_D0.2_best_model_ES.keras' al staging de Git...\n",
+            "\n",
+            "Verificando estado de Git (status)...\n",
+            "On branch main\n",
+            "Your branch is ahead of 'origin/main' by 1 commit.\n",
+            "  (use \"git push\" to publish your local commits)\n",
+            "\n",
+            "nothing to commit, working tree clean\n",
+            "\n",
+            "Haciendo commit con mensaje: 'Add/Update Keras model (LFS): MLP_ReLU_128_64_D0.2_best_model_ES.keras'\n",
+            "On branch main\n",
+            "Your branch is ahead of 'origin/main' by 1 commit.\n",
+            "  (use \"git push\" to publish your local commits)\n",
+            "\n",
+            "nothing to commit, working tree clean\n",
+            "\n",
+            "Preparando para hacer push a GitHub...\n",
+            "Ingresa tu Personal Access Token (PAT) de GitHub: ··········\n",
+            "Haciendo push a la rama 'main'...\n",
+            "Uploading LFS objects: 100% (1/1), 470 KB | 0 B/s, done.\n",
+            "Enumerating objects: 5, done.\n",
+            "Counting objects: 100% (5/5), done.\n",
+            "Delta compression using up to 2 threads\n",
+            "Compressing objects: 100% (3/3), done.\n",
+            "Writing objects: 100% (4/4), 610 bytes | 610.00 KiB/s, done.\n",
+            "Total 4 (delta 0), reused 0 (delta 0), pack-reused 0\n",
+            "To https://github.com/qb4745/evaluacion_1_deep_learning.git\n",
+            "   57e47ce..7fa477f  main -> main\n",
+            "\n",
+            "¡Push completado! Verifica tu repositorio en GitHub.\n",
+            "Deberías ver el archivo 'MLP_ReLU_128_64_D0.2_best_model_ES.keras' y notar que indica 'Stored with Git LFS'.\n",
+            "\n",
+            "Regresado al directorio: /content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "# --- Define Fashion MNIST Class Labels (if not already defined globally) ---\n",
         "# Ensure this dictionary exists in your environment. If not, define it here.\n",
