--- a/evaluacion_1_deep_learning.ipynb
+++ b/evaluacion_1_deep_learning.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "---\n",
         "\n",
-        "## 1. Introducción\n",
+        "# **Introducción**\n",
         "\n",
         "Este proyecto aborda un problema práctico de clasificación de imágenes utilizando una Red Neuronal Artificial (RNA) de tipo Perceptrón Multicapa (MLP). El objetivo es aplicar los fundamentos de Deep Learning para entrenar un modelo capaz de identificar diferentes tipos de artículos de moda a partir de imágenes en escala de grises.\n",
         "\n",
@@ -40,7 +40,7 @@
         "\n",
         "*Fuente oficial del dataset: [https://github.com/zalandoresearch/fashion-mnist](https://github.com/zalandoresearch/fashion-mnist)*\n",
         "\n",
-        "## 2. Descripción del Dataset (Contenido)\n",
+        "## **Descripción del Dataset**\n",
         "\n",
         "El dataset Fashion-MNIST se compone de imágenes y sus correspondientes etiquetas de clase. A continuación, se detallan sus características principales:\n",
         "\n",
@@ -76,11 +76,11 @@
         "\n",
         "---\n",
         "\n",
-        "## 3. Configuración del Entorno y Selección del Framework\n",
+        "## Configuración del Entorno y Selección del Framework\n",
         "\n",
         "Antes de proceder con la carga y preprocesamiento de los datos, es fundamental definir el entorno de trabajo y las herramientas principales que se utilizarán para la implementación de la Red Neuronal Artificial (MLP).\n",
         "\n",
-        "### 3.1. Elección del Framework: TensorFlow con Keras\n",
+        "### Elección del Framework: TensorFlow con Keras\n",
         "\n",
         "Para el desarrollo de este proyecto, hemos seleccionado **TensorFlow ** como la biblioteca principal de Deep Learning, utilizando específicamente su interfaz de alto nivel **Keras**.\n",
         "\n",
@@ -10367,12 +10367,12 @@
         "# ---------------------------------------------------------------------------"
       ],
       "metadata": {
-        "id": "wrfeXpKP0aTX",
-        "outputId": "54414c63-5441-4d05-ee96-ce27672e955f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "wrfeXpKP0aTX",
+        "outputId": "54414c63-5441-4d05-ee96-ce27672e955f"
       },
       "execution_count": 123,
       "outputs": [
@@ -10745,12 +10745,12 @@
         "# ---------------------------------------------------------------------------"
       ],
       "metadata": {
-        "id": "shaRoVzY1yhu",
-        "outputId": "0dc4a549-5670-495b-adc9-2bccfd082296",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "shaRoVzY1yhu",
+        "outputId": "0dc4a549-5670-495b-adc9-2bccfd082296"
       },
       "execution_count": 124,
       "outputs": [
@@ -11152,12 +11152,12 @@
         "# ---------------------------------------------------------------------------"
       ],
       "metadata": {
-        "id": "NckENca73udA",
-        "outputId": "58457a92-9cce-486f-e956-b83550ad512d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "NckENca73udA",
+        "outputId": "58457a92-9cce-486f-e956-b83550ad512d"
       },
       "execution_count": 133,
       "outputs": [
